original by ardha27

--- a/TrainingV2_train_assets_downloading_other.ipynb
+++ b/TrainingV2_train_assets_downloading_other.ipynb
@@ -835,11 +835,60 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Maybe there are some bugs here that I don't know about, I'll fix them when I have time"
+        "# RUN THE GUI\n",
+        "\n",
+        "BANNED FOR FREE  COLAB"
       ],
       "metadata": {
-        "id": "FIcUm-nPdmfj"
+        "id": "Hb1sq94kresd"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "#@title install requirements\n",
+        "\n",
+        "!pip install  -r requirements.txt"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "bG8Qb3rurVJN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "#@title move ur file to ur drive\n",
+        "\n",
+        "!cp -r /content/Retrieval-based-Voice-Conversion-Train /content/drive/MyDrive"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "0j8mrYQ7sSdl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "#@title run the webui\n",
+        "\n",
+        "%cd /content/drive/MyDrive/Retrieval-based-Voice-Conversion-Train\n",
+        "!python infer-web.py --colab"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "tSqB_oFerMMa"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -854,6 +903,15 @@
       ],
       "metadata": {
         "id": "uG4PiJzabAzr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Maybe there are some bugs here that I don't know about, I'll fix them when I have time"
+      ],
+      "metadata": {
+        "id": "FIcUm-nPdmfj"
       }
     }
   ]
