--- a/AICoverGen_V2.ipynb
+++ b/AICoverGen_V2.ipynb
@@ -20,6 +20,25 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "#@title #Fix Colab Cuda\n",
+        "from IPython.display import clear_output, Javascript\n",
+        "\n",
+        "!sudo apt update\n",
+        "!yes | sudo DEBIAN_FRONTEND=noninteractive apt-get -yq install cuda-11-8\n",
+        "\n",
+        "clear_output()\n",
+        "print(\"Done Fix Cuda\")"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "RjYJoJNyhyMI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# AICoverGen WebUI mod\n",
@@ -38,25 +57,6 @@
       "metadata": {
         "id": "uxe6qg2xmc-U"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#@title #Fix Colab Cuda\n",
-        "from IPython.display import clear_output, Javascript\n",
-        "\n",
-        "!sudo apt update\n",
-        "!yes | sudo DEBIAN_FRONTEND=noninteractive apt-get -yq install cuda-11-8\n",
-        "\n",
-        "clear_output()\n",
-        "print(\"Done Fix Cuda\")"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "RjYJoJNyhyMI"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -132,6 +132,7 @@
       "cell_type": "code",
       "source": [
         "#@title Run the WebUI\n",
+        "%cd /content/AiCoverGen\n",
         "runpice=codecs.decode('fep/jrohv.cl','rot_13')\n",
         "!python $runpice --share"
       ],
@@ -145,7 +146,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Save To Drive"
+        "# Drive"
       ],
       "metadata": {
         "id": "s7BwW33Fm3cN"
@@ -222,6 +223,7 @@
       "cell_type": "code",
       "source": [
         "#@title #Download MDXNet Vocal Separation and Hubert Base Models\n",
+        "import codecs\n",
         "models=codecs.decode('fep/qbjaybnq_zbqryf.cl','rot_13')\n",
         "!python $models\n",
         "clear_output()\n",
@@ -244,6 +246,159 @@
       "metadata": {
         "cellView": "form",
         "id": "L85iS-dboLOj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# no ui"
+      ],
+      "metadata": {
+        "id": "-I7ob1cqV96O"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title Model Download Function\n",
+        "\n",
+        "import os\n",
+        "import zipfile\n",
+        "import shutil\n",
+        "import urllib.request\n",
+        "\n",
+        "BASE_DIR = os.getcwd()\n",
+        "rvc_models_dir = os.path.join(BASE_DIR, 'rvc_models')\n",
+        "\n",
+        "def extract_zip(extraction_folder, zip_name):\n",
+        "    os.makedirs(extraction_folder)\n",
+        "    with zipfile.ZipFile(zip_name, 'r') as zip_ref:\n",
+        "        zip_ref.extractall(extraction_folder)\n",
+        "    os.remove(zip_name)\n",
+        "\n",
+        "    index_filepath, model_filepath = None, None\n",
+        "    for root, dirs, files in os.walk(extraction_folder):\n",
+        "        for name in files:\n",
+        "            if name.endswith('.index') and os.stat(os.path.join(root, name)).st_size > 1024 * 100:\n",
+        "                index_filepath = os.path.join(root, name)\n",
+        "\n",
+        "            if name.endswith('.pth') and os.stat(os.path.join(root, name)).st_size > 1024 * 1024 * 40:\n",
+        "                model_filepath = os.path.join(root, name)\n",
+        "\n",
+        "    if not model_filepath:\n",
+        "        raise Exception(f'No .pth model file was found in the extracted zip. Please check {extraction_folder}.')\n",
+        "\n",
+        "    # move model and index file to extraction folder\n",
+        "    os.rename(model_filepath, os.path.join(extraction_folder, os.path.basename(model_filepath)))\n",
+        "    if index_filepath:\n",
+        "        os.rename(index_filepath, os.path.join(extraction_folder, os.path.basename(index_filepath)))\n",
+        "\n",
+        "    # remove any unnecessary nested folders\n",
+        "    for filepath in os.listdir(extraction_folder):\n",
+        "        if os.path.isdir(os.path.join(extraction_folder, filepath)):\n",
+        "            shutil.rmtree(os.path.join(extraction_folder, filepath))\n",
+        "\n",
+        "def download_online_model(url, dir_name):\n",
+        "    try:\n",
+        "        print(f'[~] Downloading voice model with name {dir_name}...')\n",
+        "        zip_name = url.split('/')[-1]\n",
+        "        extraction_folder = os.path.join(rvc_models_dir, dir_name)\n",
+        "        if os.path.exists(extraction_folder):\n",
+        "            raise Exception(f'Voice model directory {dir_name} already exists! Choose a different name for your voice model.')\n",
+        "\n",
+        "        if 'pixeldrain.com' in url:\n",
+        "            url = f'https://pixeldrain.com/api/file/{zip_name}'\n",
+        "\n",
+        "        urllib.request.urlretrieve(url, zip_name)\n",
+        "\n",
+        "        print('[~] Extracting zip...')\n",
+        "        extract_zip(extraction_folder, zip_name)\n",
+        "        print(f'[+] {dir_name} Model successfully downloaded!')\n",
+        "\n",
+        "    except Exception as e:\n",
+        "        raise Exception(str(e))\n",
+        "\n",
+        "url = \"https://pixeldrain.com/u/7osoXtcW\" # @param {type:\"string\"}\n",
+        "dir_name = \"LYN\" # @param {type:\"string\"}\n",
+        "\n",
+        "download_online_model(url, dir_name)"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "6NVljrO1WDD4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# @title Generate | Output generated inside \"AICoverGen\\song_output\\random_number\"\n",
+        "# @markdown Main Option | You also can input audio path inside \"SONG_INPUT\"\n",
+        "SONG_INPUT = \"https://youtu.be/3NoKAOTE_ZI?si=JOmjYZVFZ7pxYzho\" # @param {type:\"string\"}\n",
+        "RVC_DIRNAME = \"LYN\" # @param {type:\"string\"}\n",
+        "PITCH_CHANGE = -1 # @param {type:\"integer\"}\n",
+        "PITCH_CHANGE_ALL = 0 # @param {type:\"integer\"}\n",
+        "# @markdown Voice Conversion Options\n",
+        "INDEX_RATE = 0.5 # @param {type:\"number\"}\n",
+        "FILTER_RADIUS = 3 # @param {type:\"integer\"}\n",
+        "PITCH_DETECTION_ALGO = \"rmvpe\" # @param [\"rmvpe\", \"mangio-crepe\"]\n",
+        "CREPE_HOP_LENGTH = 128 # @param {type:\"integer\"}\n",
+        "PROTECT = 0.33 # @param {type:\"number\"}\n",
+        "REMIX_MIX_RATE = 0.25  # @param {type:\"number\"}\n",
+        "# @markdown Audio Mixing Options\n",
+        "MAIN_VOL = 0 # @param {type:\"integer\"}\n",
+        "BACKUP_VOL = 0 # @param {type:\"integer\"}\n",
+        "INST_VOL = 0 # @param {type:\"integer\"}\n",
+        "# @markdown Reverb Control\n",
+        "REVERB_SIZE = 0.15 # @param {type:\"number\"}\n",
+        "REVERB_WETNESS = 0.2 # @param {type:\"number\"}\n",
+        "REVERB_DRYNESS = 0.8 # @param {type:\"number\"}\n",
+        "REVERB_DAMPING = 0.7 # @param {type:\"number\"}\n",
+        "# @markdown Output Format\n",
+        "OUTPUT_FORMAT = \"mp3\" # @param [\"mp3\", \"wav\"]\n",
+        "\n",
+        "import subprocess\n",
+        "\n",
+        "command = [\n",
+        "    \"python\",\n",
+        "    \"src/main.py\",\n",
+        "    \"-i\", SONG_INPUT,\n",
+        "    \"-dir\", RVC_DIRNAME,\n",
+        "    \"-p\", str(PITCH_CHANGE),\n",
+        "    \"-k\",\n",
+        "    \"-ir\", str(INDEX_RATE),\n",
+        "    \"-fr\", str(FILTER_RADIUS),\n",
+        "    \"-rms\", str(REMIX_MIX_RATE),\n",
+        "    \"-palgo\", PITCH_DETECTION_ALGO,\n",
+        "    \"-hop\", str(CREPE_HOP_LENGTH),\n",
+        "    \"-pro\", str(PROTECT),\n",
+        "    \"-mv\", str(MAIN_VOL),\n",
+        "    \"-bv\", str(BACKUP_VOL),\n",
+        "    \"-iv\", str(INST_VOL),\n",
+        "    \"-pall\", str(PITCH_CHANGE_ALL),\n",
+        "    \"-rsize\", str(REVERB_SIZE),\n",
+        "    \"-rwet\", str(REVERB_WETNESS),\n",
+        "    \"-rdry\", str(REVERB_DRYNESS),\n",
+        "    \"-rdamp\", str(REVERB_DAMPING),\n",
+        "    \"-oformat\", OUTPUT_FORMAT\n",
+        "]\n",
+        "\n",
+        "# Open a subprocess and capture its output\n",
+        "process = subprocess.Popen(command, stdout=subprocess.PIPE, stderr=subprocess.STDOUT, universal_newlines=True)\n",
+        "\n",
+        "# Print the output in real-time\n",
+        "for line in process.stdout:\n",
+        "    print(line, end='')\n",
+        "\n",
+        "# Wait for the process to finish\n",
+        "process.wait()"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "-h7ea-_xV-18"
       },
       "execution_count": null,
       "outputs": []
